# svelte-wasm-audio-worklet

./: README.md
rust-wasm/: .directory  Cargo.toml  build.sh  rust_wasm.patch
rust-wasm/src/: lib.rs
svelte-app/: .directory  package-lock.json  package.json
svelte-app/src/lib/: audio-processor.ts  worklet.d.ts
svelte-app/src/routes/: +page.svelte
