[package]
edition = "2021"
name = "rust-wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = {version = "0.1.6", optional = true}
wasm-bindgen = "0.2.84"

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
